# MirrorFly-ReactNative-Sample

./: .eslintrc  .gitignore  .prettierrc  App.js  Gemfile  Jenkinsfile  README.md  ReactotronConfig.js  Readme.md  app.json  babel.config.js  build.properties  firebase.json  index.js  jsconfig.json  metro.config.js  package-lock.json  package.json  qamail.properties  rollup.config.js  rollup.config.mjs  sonar-project.properties
__tests__/: App.test.tsx
android/: build.gradle  settings.gradle
android/app/: _BUCK  build.gradle  google-services(GL).json  google-services(GLprod).json  google-services(dev).json  google-services(fn).json  google-services.json  proguard-rules.pro
android/app/jni/: BuffersStorage.cpp  ByteArray.cpp  CMakeLists.txt  ConnectionsManager.cpp  ConnectionsManager.h  FileLog.cpp  FileLog.h  NativeByteBuffer.cpp  NativeLoader.cpp  c_utils.h  filecompress-lib.cpp  native-lib.cpp  native-lib.h
android/app/jni/ffmpeg/include/libavformat/: isom.h
android/fastlane/: Appfile  Fastfile  README.md
ios/: Async.swift  DeviceIdModule.m  DeviceIdModule.swift  FlyEncryption.swift  FlyUtiles.swift  GoogleService-Info.plist  Jenkinsfile  MediaConverter.m  MediaService.swift  MediaServiceBridge.m  Podfile  build.properties  mirrorfly_rn-Bridging-Header.h
ios/AwesomeProject/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/AwesomeProject.xcodeproj/: project.pbxproj
ios/AwesomeProjectTests/: AwesomeProjectTests.m
ios/JenkinsPlist/: MirrorFlyQa.plist
ios/MirrorFlyRN/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/MirrorFlyRN.xcodeproj/: project.pbxproj
ios/MirrorFlyRNTests/: MirrorFlyRNTests.m
ios/NotificationExtension/: FlyEncryption.swift  MyClass.swift  NotificationExtension.entitlements  NotificationService.h  NotificationService.m  sendDeliveredApiCall.swift
ios/fastlane/: Appfile  Fastfile  README.md
ios/mfsample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/mfsample.xcodeproj/: project.pbxproj
ios/mfsample.xcworkspace/: contents.xcworkspacedata
ios/mfsampleTests/: mfsampleTests.m
ios/mirrorflyRn/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/mirrorflyRn.xcodeproj/: project.pbxproj
ios/mirrorflyRnTests/: mirrorflyRnTests.m
ios/mirrorfly_rn/: AppDelegate.h  AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard  RNCallKeep.m  mirrorfly_rn.entitlements
ios/mirrorfly_rn.xcodeproj/: project.pbxproj
ios/mirrorfly_rn.xcworkspace/: contents.xcworkspacedata
ios/mirrorfly_rnTests/: Info.plist  mirrorfly_rnTests.m
patches/: @react-native-camera-roll+camera-roll+7.9.0.patch  @react-native-community+cameraroll+4.1.2.patch  react-native-callkeep+4.3.12.patch  react-native-camera+4.2.1.patch  react-native-contacts+8.0.4.patch  react-native-create-thumbnail+2.0.0.patch  react-native-create-thumbnail+2.0.1.patch  react-native-headphone-detection+1.3.0.patch  react-native-incall-manager+4.1.0.patch  react-native-keep-awake+4.0.0.patch  react-native-keyevent+0.3.2.patch  react-native-material-menu+2.0.0.patch  react-native-permissions+5.2.4.patch  react-native-sound+0.11.2.patch  react-native-tab-view+3.5.2.patch
src/: .uikitMethods.js.swp  ChatApp.js  MirrorflyChatComponent.js  config.js  constant.js  hooks.js  icons.js  index.js  uikitMethods.js
src/Helper/: index.js  package.json
src/Media/: AudioPlayer.js  ImageZoom.js  RNSlider.js  VideoPlayer.js  styles.js
src/Navigation/: index.js  rootNavigation.js  stackNavigation.js
src/RNCamera/: CameraService.js  FlashmodeService.js  TimerService.js  camHooks.js
src/SDK/: SDK.js  constants.js  crypt.js  index.js  package.json  sdkCallBacks.js  utils.js
src/SDKActions/: callbacks.js  package.json  utils.js
src/Service/: Auth.js  CallNotify.js  Notifee.js  PushNotifiLocal.js  PushNotify.js  constants.js  remoteNotifyHandle.js
src/calls/: CallComponent.js  CallContainer.js  ios.js
src/common/: AlertModal.js  AlertModalRoot.js  AttachementBar.js  AttachmentMenu.js  AttachmentProgressLoader.js  AuthProfileImage.js  AuthendicatedImage.js  Avathar.js  Button.js  ConnectionStatus.js  CustomHooks.js  CustomRadio.js  CustomSwitch.js  GallerPermissionModal.js  HighlightedMessage.js  IconButton.js  Icons.js  Image.js  ImagePreView.js  InfoImageView.js  LoadingModal.js  MarqueeText.js  MediaBar.js  MediaProgressLoader.js  MenuContainer.js  MessagePressable.js  Modal.js  NickName.js  Pressable.js  RecentChatProfile.js  RenderDeleteIcon.js  RippleAnimation.js  ScreenHeader.js  Slide.js  SlideInView.js  Text.js  TextInput.js  TimeStamp.js  ToastMessage.js  UserAvatharNickname.js  (+8 more)
src/components/: .StatusPage.js.swp  AlertModal.js  Animate.js  ArchiveToggle.js  ArchivedChat.js  ArchivedHeader.js  AttachementBar.js  AudioCard.js  AuthProfileImage.js  CameraPickView.js  CaptionContainer.js  ChatConversation.js  ChatConversationList.js  ChatHeader.js  ChatHeaderActions.js  ChatHeaderSearch.js  ChatInput.js  ChatMessage.js  ChatSearchInput.js  CollapsibleToolbar.js  ContactCard.js  ConversationList.js  CountryItems.js  DeletedMessage.js  DocTile.js  DocumentCard.js  DocumentMessageCard.js  DocumentTab.js  DropDown.js  EditMessage.js  EditStatusPage.js  EmojiInput.js  EmojiPicker.js  FlatListView.js  GalleryHeader.js  GalleryPickView.js  GroupChatMessageInfo.js  GrpCollapsibleToolbar.js  ImageCard.js  ImageInfo.js  (+52 more)
src/config/: appColors.js  appTheme.js  config.js
src/helpers/: chatHelpers.js  constants.js
src/hooks/: useAndroidKeyboardPadding.js  useCallScreenStateChange.js  useChatMessage.js  useConversation.js  useFetchImage.js  useMediaMessaegs.js  useMediaProgress.js  usePipModuleListener.js  useRosterData.js
src/localization/: stringSet.js
src/model/: CountryItems.js  RecentChatItem.js
src/navigation/: Navigation.js
src/realm/: ProfileSchema.js  realm.js
src/redux/: SingleChatImageSlice.js  alertModalSlice.js  authSlice.js  callAgainSlice.js  callControlsSlice.js  callModalToastSlice.js  callStateSlice.js  chatMessageDataSlice.js  chatSeenPendingMsg.js  chatSlice.js  clearSlice.js  connectionSlice.js  conversationSlice.js  (+27 more)
(+303 files in other folders)
